# ChangeLog for sys-apps/portage
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.902 2011/11/10 16:18:28 zmedico Exp $

  10 Nov 2011; Zac Medico <zmedico@gentoo.org> portage-2.1.6.13.ebuild,
  portage-2.1.6.7.ebuild:
  Reference bug #330937 for the python-2.6.6 blocker in old portage. This
  blocker breaks the upgrade path from <python-2.6 since python-2.6.5 is no
  longer in the tree.

*portage-2.2.0_alpha73 (10 Nov 2011)

  10 Nov 2011; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha73.ebuild:
  2.2.0_alpha73 version bump. This includes all of the fixes in
  portage-2.1.10.33. Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.33 (10 Nov 2011)

  10 Nov 2011; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.33.ebuild:
  2.1.10.33 version bump. This fixes bug #389047 (docompress -x triggers lost
  files when PORTAGE_COMPRESS is empty), bug #389609 (add emerge --moo action),
  bug #389611 (emerge --changelog support for ChangeLog-YYYY), and bug #389617
  (respect --usepkgonly in package spelling suggestions). Bug #381649 tracks all
  bugs fixed since portage-2.1.10.11.

  10 Nov 2011; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.31.ebuild,
  -portage-2.2.0_alpha71.ebuild:
  Remove old versions.

  02 Nov 2011; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
  Bump to EAPI 3 and add prefix support.

*portage-2.2.0_alpha72 (30 Oct 2011)

  30 Oct 2011; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha72.ebuild:
  2.2.0_alpha72 version bump. This includes all of the fixes in
  portage-2.1.10.32. Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.32 (30 Oct 2011)

  30 Oct 2011; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.32.ebuild:
  2.1.10.32 version bump. This fixes bug #388031 (layout.conf profile-formats
  setting), bug #388233 (emerge --check-news action), bug #388593 (run